# Async_API_sprint_1

./: Dockerfile  docker-compose.yml
asyncio/: async_server.py  callback.py  countdown.py  io-scheduler.py  scheduler.py  simple_server.py  task.py  yieldo.py
src/: constants.py  main.py  pyproject.toml  routes.py  utils.py
src/api/v1/: film.py  genre.py  person.py  smoke.py
src/core/: config.py
src/db/: redis.py
src/models/: film.py  genre.py  person.py
src/nginx/: Dockerfile  backend.conf
src/services/: base.py  base_cache.py  film.py  genre.py  person.py
src/tests/functional/: conftest.py  settings.py
src/tests/functional/src/: test_films.py
