[tool.poetry]
name = "src"
version = "0.1.0"
description = "FastAPI app"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
pydantic = "^1.8.2"
elasticsearch = "^7.14.0"
uvicorn = "^0.14.0"
orjson = "^3.6.1"
aiohttp = "^3.7.4"
aioredis = "1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
